498320 - Renaming a face tag fails to move over the training data

BUG: 498320
FIXED-IN: 8.6.0